changes to add a create conversation when a converstion-less message is sent first
